// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BoostForm > lets user open a leveraged position using a swap 1`] = `
[
  {
    "borrowedVToken": {
      "address": "0x6d6F697e34145Bb95c54E77482d97cc261Dc237E",
      "chainId": 97,
      "decimals": 8,
      "symbol": "vXVS",
      "underlyingToken": {
        "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
        "chainId": 97,
        "decimals": 18,
        "iconSrc": "fake-xvs-asset",
        "symbol": "XVS",
      },
    },
    "suppliedVToken": {
      "address": "0xb7526572FFE56AB9D7489838Bf2E18e3323b441A",
      "chainId": 97,
      "decimals": 8,
      "symbol": "vUSDT",
      "underlyingToken": {
        "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
        "chainId": 97,
        "decimals": 6,
        "iconSrc": "fake-usdt-asset",
        "symbol": "USDT",
      },
    },
    "swapQuote": {
      "callData": "0x",
      "direction": "exact-in",
      "expectedToTokenAmountReceivedMantissa": 100000000n,
      "fromToken": {
        "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
        "chainId": 97,
        "decimals": 18,
        "iconSrc": "fake-xvs-asset",
        "symbol": "XVS",
      },
      "fromTokenAmountSoldMantissa": 1000000000000000000n,
      "minimumToTokenAmountReceivedMantissa": 100000000n,
      "priceImpactPercentage": 0.1,
      "toToken": {
        "address": "0xA11c8D9DC9b66E209Ef60F0C8D969D3CD988782c",
        "chainId": 97,
        "decimals": 6,
        "iconSrc": "fake-usdt-asset",
        "symbol": "USDT",
      },
    },
  },
]
`;

exports[`BoostForm > lets user open a leveraged position using the same supplied and borrowed market 1`] = `
[
  {
    "amountMantissa": 1000000000000000000n,
    "vToken": {
      "address": "0x6d6F697e34145Bb95c54E77482d97cc261Dc237E",
      "chainId": 97,
      "decimals": 8,
      "symbol": "vXVS",
      "underlyingToken": {
        "address": "0xB9e0E753630434d7863528cc73CB7AC638a7c8ff",
        "chainId": 97,
        "decimals": 18,
        "iconSrc": "fake-xvs-asset",
        "symbol": "XVS",
      },
    },
  },
]
`;

exports[`BoostForm > renders correct available amount when asset borrow cap is the limiting factor 1`] = `"Available990 XVS"`;

exports[`BoostForm > renders correct available amount when asset liquidity is the limiting factor 1`] = `"Available1 XVS"`;

exports[`BoostForm > renders correct available amount when user borrow limit is the limiting factor 1`] = `"Available10 XVS"`;

exports[`BoostForm > renders correct available amount when user health factor is the limiting factor 1`] = `"Available0.05 XVS"`;
